<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="371dp"
        android:layout_height="399dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:background="#80000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:background="#99000000">

            <TextView
                android:id="@+id/title_tab"
                android:layout_width="179dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/tab_title1"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_tab2"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:text="@string/tab_title2"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/servo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/servo3"
                android:textAlignment="textStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/servo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/servo1"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angle2"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/servo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/servo2"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angle3"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/servo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/servo6"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angle4"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/servo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/servo5"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angle5"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/servo6"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginBottom="20sp"
                android:text="@string/servo4"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angle6"
                android:textAlignment="center"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/servo7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:text="@string/servo7"
                android:textAlignment="viewStart"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/angle7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/angle7"
                android:textAlignment="center"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_servomoteur"
        android:layout_width="180dp"
        android:layout_height="52dp"
        android:background="#99000000"
        android:textColor="@color/snow"
        android:text="@string/servomoteur"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />
</androidx.constraintlayout.widget.ConstraintLayout>