<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableLayout
        android:id="@+id/tableLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/border_radius"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="90sp"
                android:layout_marginBottom="10sp"
                android:text="@string/title3"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="219dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25sp"
                android:layout_marginLeft="10sp"
                android:layout_marginEnd="25sp"
                android:layout_marginRight="10sp">

                <ImageButton
                    android:id="@+id/pince_open"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/open" />

                <ImageButton
                    android:id="@+id/pince_RG"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/left" />

                <ImageButton
                    android:id="@+id/pince_IH"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10sp"
                    android:src="@android:drawable/ic_dialog_alert" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25sp"
                android:layout_marginLeft="10sp"
                android:layout_marginEnd="25sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/textOuvrir"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="15sp"
                    android:text="@string/btn_ouvrir"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textGauche"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:text="@string/btn_gauche"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textMonter"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10sp"
                    android:text="@string/btn_monter"
                    android:textAlignment="center"
                    android:textStyle="italic" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25sp"
                android:layout_marginLeft="10sp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="10sp">

                <ImageButton
                    android:id="@+id/pince_close"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/close" />

                <ImageButton
                    android:id="@+id/pince_RD"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/right" />

                <ImageButton
                    android:id="@+id/pince_IB"
                    android:layout_width="90dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="10sp"
                    app:srcCompat="@android:drawable/ic_dialog_alert" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25sp"
                android:layout_marginLeft="10sp"
                android:layout_marginEnd="25sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/textFermer"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:layout_marginEnd="15sp"
                    android:text="@string/btn_fermer"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textDroite"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="15sp"
                    android:layout_marginEnd="15sp"
                    android:text="@string/btn_droite"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textDescendre"
                    android:layout_width="70dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="10sp"
                    android:text="@string/btn_descendre"
                    android:textAlignment="center"
                    android:textStyle="italic" />
            </TableRow>

        </TableLayout>

    </TableLayout>

    <TableLayout
        android:id="@+id/TableRowBras"
        android:layout_width="354dp"
        android:layout_height="258dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/border_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:id="@+id/TableRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="90sp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="90sp"
                android:layout_marginBottom="10sp"
                android:text="@string/title4"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableLayout
            android:id="@+id/TableRow2Bras"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="219dp">

            <TableRow
                android:id="@+id/TableRow2Bras1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp">

                <ImageButton
                    android:id="@+id/bras_TG"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="5sp"
                    android:background="@drawable/turn_left" />

                <ImageButton
                    android:id="@+id/bras_LAb"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:background="@drawable/monter_ab" />

                <ImageButton
                    android:id="@+id/bras_RG"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:background="@drawable/rotation_left" />

                <ImageButton
                    android:id="@+id/bras_LB"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5sp"
                    android:background="@drawable/monter_b" />


            </TableRow>

            <TableRow
                android:id="@+id/TableRow2Bras2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/textGauche2"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:layout_marginEnd="10sp"
                    android:text="@string/btn_gauche2"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textLeverAvantBras"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:text="@string/btn_lever_avant_bras"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="@+id/bras_LAb"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/bras_LAb"
                    app:layout_constraintTop_toBottomOf="@+id/bras_LAb" />


                <TextView
                    android:id="@+id/textRotationG"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:text="@string/btn_rotationG"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textLeverBras"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="10sp"
                    android:text="@string/btn_lever_bras"
                    android:textAlignment="center"
                    android:textStyle="italic" />


            </TableRow>

            <TableRow
                android:id="@+id/TableRow2Bras3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp">

                <ImageButton
                    android:id="@+id/bras_TD"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginEnd="5sp"
                    android:background="@drawable/turn_right" />

                <ImageButton
                    android:id="@+id/bras_DAb"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:background="@drawable/descendre_ab" />

                <ImageButton
                    android:id="@+id/bras_RD"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5sp"
                    android:layout_marginEnd="5sp"
                    android:background="@drawable/rotation_right" />

                <ImageButton
                    android:id="@+id/bras_DB"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="5sp"
                    android:background="@drawable/descendre_b" />


            </TableRow>

            <TableRow
                android:id="@+id/TableRow2Bras4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10sp"
                android:layout_marginEnd="10sp"
                android:layout_marginBottom="10sp">

                <TextView
                    android:id="@+id/textDroite2"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:layout_marginEnd="5sp"
                    android:text="@string/btn_droite2"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textDescendreAvantBras"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:text="@string/btn_descendre_avant_bras"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textRotationD"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:text="@string/btn_rotationD"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textDescendreBras"
                    android:layout_width="70dp"
                    android:layout_height="21dp"
                    android:layout_marginStart="5sp"
                    android:text="@string/btn_descendre_bras"
                    android:textAlignment="center"
                    android:textStyle="italic" />

            </TableRow>

        </TableLayout>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>